--- a/public/login.html
+++ b/public/login.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="page_content">
-        <form action="#" class="login">
+        <form action="../verify.js" class="login">
             <p>
                 <h1>
                 Log in
@@ -43,11 +43,11 @@
             <p class="formlabel">
                 Username
             </p>
-            <input type="text">
+            <input type="text" name="user">
             <p class="formlabel">
                 Password
             </p>
-            <input type="password">
+            <input type="password" name="pass">
             <br>
             <input type="submit" value="Log in" class="submit">
         </form>
