giving up on the github thing

--- a/public/login.html
+++ b/public/login.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="page_content">
-        <form action="/verify" method="put" class="login">
+        <form action="/login/verify" method="PUT" class="login">
             <p>
                 <h1>
                 Log in
