Returning to working edition

--- a/public/login.html
+++ b/public/login.html
@@ -43,11 +43,11 @@
             <p class="formlabel">
                 Username
             </p>
-            <input type="text" name="user" id ="user" value="user">
+            <input type="text" name="user" id ="user" >
             <p class="formlabel">
                 Password
             </p>
-            <input type="password" name="pass" id="pass" value="pass">
+            <input type="password" name="pass" id="pass" >
             <br>
             <input type="submit" value="Log in" class="submit">
         </form>
