Trying flash with a script thing

--- a/public/login.html
+++ b/public/login.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html xml:lang="en" lang="en">
+<script>
+if (messages.error) { %>
+    <p style="color:red">messages.error</p>
+}
+</script>
 
 <head>
 	<title>Generator Mockup</title>
