--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html xml:lang="en" lang="en">
 <script>
-if (messages.error) { %>
+if (messages.error) { 
     <p style="color:red">messages.error</p>
 }
 </script>
